--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
+PyYAML==3.10
 argparse==1.2.1
 coverage==3.7
 pika==0.9.13
 pymongo==2.6.3
+python-coveralls==2.4.2
+requests==2.1.0
+sh==1.09
+six==1.4.1
+stomp.py==4.0.2
 wsgiref==0.1.2
